Добавлен модуль объявлений, изменена структура модели данных